--- a/gdrive-webapi/package.json
+++ b/gdrive-webapi/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "mkdir -p uploads && node src/index.js",
 		"test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand",
-		"test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch --runInBand",
+		"test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch --runInBand --watchAll",
 		"test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache --runInBand --coverage"
 	},
 	"keywords": [],
@@ -17,6 +17,8 @@
 		"jest": "^27.1.1"
 	},
 	"dependencies": {
+		"busboy": "^0.3.1",
+		"form-data": "^4.0.0",
 		"pino": "^6.13.2",
 		"pino-pretty": "^7.0.0",
 		"pretty-bytes": "^5.6.0",
